# idphoto

./: CMakeLists.txt  README.md  changecolor.cpp  changecolor.h  colorlabel.cpp  colorlabel.h  idphoto.cpp  idphoto.h  imagelabel.cpp  imagelabel.h  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  matqt.h  photosize.h
